--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[metadata.heroku]
+  root-package = "github.com/jjmarsha/NormsBackend"
+  build = ['.']
+  ensure="true"
